--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name = "Juge"
+name = "juge"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dependencies.tokio]
+version = "1.19.2"
+features = ["macros", "rt-multi-thread"]
+
+[dependencies.serenity]
+git = "https://github.com/serenity-rs/serenity"
+default-features = false
+features = ["client", "gateway", "rustls_backend", "model"]
