--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "juge"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 mysql = "22.2.0"
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
 
 [dependencies.tokio]
 version = "1.19.2"
